apps/staging/hello-world/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-world
  namespace: staging
  labels:
    app: hello-world
    environment: staging
spec:
  replicas: 0
  selector:
    matchLabels:
      app: hello-world
  template:
    metadata:
      labels:
        app: hello-world
        environment: staging
    spec:
      containers:
        - name: hello-world
          image: docker.io/library/nginx:stable
          ports:
            - containerPort: 80
              protocol: TCP
